--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,9 +57,9 @@ ya-client-model = "0.4"
 gftp = { version = "^0.2", optional = true } # just to enable gftp build for cargo-deb
 ya-provider = { version = "0.2", optional = true } # just to enable conditionally running some tests
 
-actix-rt = "2.2"
-actix-service = "=2.0.0-beta.5"
-actix-web = "=4.0.0-beta.5"
+actix-rt = "2.7"
+actix-service = "2"
+actix-web = "4"
 anyhow = "1.0"
 chrono = "0.4"
 directories = "2.0.2"
@@ -73,7 +73,7 @@ serde = "1.0"
 serde_json = "1.0"
 structopt = "0.3"
 tokio = { version = "1", features = ["net"] }
-tokio-util = { version = "0.3", features = ["codec"] }
+tokio-util = { version = "0.7", features = ["codec"] }
 tokio-stream = { version = "0.1.8", features = ["io-util"] }
 url = "2.1.1"
 
@@ -181,10 +181,10 @@ ya-service-api-interfaces = { path = "core/serv-api/interfaces" }
 ya-service-api-web = { path = "core/serv-api/web" }
 
 ## SERVICE BUS
-ya-service-bus = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "f51c01ef5bb1a6d5c905722b7c3a4bbde3fbfa0c"}
-ya-sb-proto = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "f51c01ef5bb1a6d5c905722b7c3a4bbde3fbfa0c"}
-ya-sb-router = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "f51c01ef5bb1a6d5c905722b7c3a4bbde3fbfa0c"}
-ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "f51c01ef5bb1a6d5c905722b7c3a4bbde3fbfa0c"}
+ya-service-bus = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "9532fa85a768ccdb73ab81780057cae06ce5c782"}
+ya-sb-proto = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "9532fa85a768ccdb73ab81780057cae06ce5c782"}
+ya-sb-router = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "9532fa85a768ccdb73ab81780057cae06ce5c782"}
+ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "9532fa85a768ccdb73ab81780057cae06ce5c782"}
 
 ## OTHERS
 gftp = { path = "core/gftp" }
@@ -204,6 +204,10 @@ ya-utils-process = { path = "utils/process"}
 ya-diesel-utils = { path = "utils/diesel-utils"}
 ya-metrics = { path = "core/metrics" }
 ya-provider = { path = "agent/provider"}
+
+
+ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "f8b66b98d533db9d766b70a24a3e40d338f23952" }
+ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "f8b66b98d533db9d766b70a24a3e40d338f23952" }
 
 ethereum-tx-sign = { git = "https://github.com/mfranciszkiewicz/ethereum-tx-sign.git", rev = "1164c74187a9e2947faeaea7dde104c3cdec4195" }
 graphene-sgx = { git = " https://github.com/golemfactory/graphene-rust.git", rev = "3619f63a0c1ff44962ab604e55cd5dfb62177c56" }
