--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -37,10 +37,10 @@ rustc-hex = "2.1.0"
 ya-service-api-derive = "0.1"
 ya-sb-router = "0.4"
 
-actix-rt = "2.2"
-actix-service = "=2.0.0-beta.5"
-actix-web = "=4.0.0-beta.5"
-awc = "=3.0.0-beta.4"
+actix-rt = "2.7"
+actix-service = "2"
+actix-web = "4"
+awc = "3"
 base64 = "0.12"
 dotenv = "0.15"
 env_logger = "0.7.1"
