--- a/core/market/Cargo.toml
+++ b/core/market/Cargo.toml
@@ -24,11 +24,11 @@ ya-service-bus = "0.4"
 ya-std-utils = "0.1"
 ya-utils-actix = "0.1"
 
-actix = { version = "0.11", default-features = false }
-actix-http = "=3.0.0-beta.5"
-actix-rt = "2.2"
-actix-service = "=2.0.0-beta.5"
-actix-web = "=4.0.0-beta.5"
+actix = { version = "0.13", default-features = false }
+actix-http = "3"
+actix-rt = "2.7"
+actix-service = "2"
+actix-web = "4"
 anyhow = "1.0"
 async-trait = { version = "0.1.33" }
 backtrace = "0.3.50"
@@ -39,7 +39,7 @@ diesel_migrations = "1.4"
 digest = "0.8.1"
 env_logger = { version = "0.7" }
 futures = "0.3"
-humantime = "2.0.0"
+humantime = "2"
 lazy_static = "1.4"
 libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
 log = "0.4"
@@ -52,9 +52,9 @@ regex = "1.4.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha3 = "0.8.2"
-structopt = "0.3.20"
-strum = "0.19.5"
-strum_macros = "0.19.4"
+structopt = "0.3"
+strum = "0.24"
+strum_macros = "0.24"
 thiserror = "1.0"
 tokio = { version = "1", features = ["time", "sync"] }
 uuid = { version = "0.8", features = ["v4"] }
@@ -62,7 +62,6 @@ uuid = { version = "0.8", features = ["v4"] }
 [dev-dependencies]
 all_asserts = "2.2.0"
 serde_json = "1.0"
-#serial_test = "0.5.0"
-serial_test = { git = "https://github.com/mfranciszkiewicz/serial_test.git", branch = "actix_rt_2_2_test"}
+serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"]}
 structopt = "0.3"
 tokio = { version = "1", features = ["macros", "rt"] }
