--- a/core/metrics/Cargo.toml
+++ b/core/metrics/Cargo.toml
@@ -15,8 +15,8 @@ ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
 ya-service-bus = "0.4"
 
-awc = "=3.0.0-beta.4"
-actix-web = { version = "=4.0.0-beta.5", features = ["openssl"] }
+awc = "3"
+actix-web = { version = "4", features = ["openssl"] }
 anyhow = "1.0.32"
 bigdecimal = "0.2"
 futures = "0.3"
