--- a/core/payment-driver/base/Cargo.toml
+++ b/core/payment-driver/base/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 default = []
 
 [dependencies]
-actix = { version = "0.11", default-features = false }
+actix = { version = "0.13", default-features = false }
 anyhow = "1.0"
 async-trait = "0.1"
 bigdecimal = { version = "0.2" }
@@ -16,10 +16,7 @@ chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = "1.4"
 ethereum-types = "0.11"
-# Lock ethsign on this commit to match parity-crypto=0.6 from zksync_eth_client
-ethsign = { git = "https://github.com/tomusdrw/ethsign.git", rev = "1b93031d2c45f3a3313e5418876b3d3e751ba87e" }
-# TODO: Upgrade to latest = 0.8 after zksync_eth_client is updated
-# ethsign = "0.8"
+ethsign = "0.8"
 futures = "0.3"
 hex = "0.4"
 log = "0.4"
