--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -19,8 +19,8 @@ ya-service-api-interfaces = "0.1"
 ya-service-api-web = "0.1"
 ya-service-bus = "0.4"
 
-actix-web = "=4.0.0-beta.5"
-anyhow = "1.0.26"
+actix-web = "4"
+anyhow = "1.0"
 base64 = "0.12"
 bigdecimal = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
@@ -53,9 +53,6 @@ ya-zksync-driver = "0.2"
 ya-net = { version = "0.2", features = ["service"] }
 ya-sb-router = "0.4"
 
-actix-rt = "2.2"
+actix-rt = "2.7"
 rand = "0.8"
-# Lock ethsign on this commit to match parity-crypto=0.6 from zksync_eth_client
-ethsign = { git = "https://github.com/tomusdrw/ethsign.git", rev = "1b93031d2c45f3a3313e5418876b3d3e751ba87e" }
-# TODO: Upgrade to latest = 0.8 after zksync_eth_client is updated
-# ethsign = "0.8"
+ethsign = "0.8"
