--- a/core/serv-api/derive/Cargo.toml
+++ b/core/serv-api/derive/Cargo.toml
@@ -19,9 +19,9 @@ syn = { version = "1.0", features = ["full"] }
 [dev-dependencies]
 ya-service-api-interfaces = "0.1"
 
-actix-rt = "2.2"
-actix-service = "=2.0.0-beta.5"
-actix-web = "=4.0.0-beta.5"
+actix-rt = "2.7"
+actix-service = "2"
+actix-web = "4"
 anyhow = "1.0"
 log = "0.4"
 structopt = "0.3"
