--- a/core/serv-api/web/Cargo.toml
+++ b/core/serv-api/web/Cargo.toml
@@ -12,9 +12,9 @@ ya-service-api = "0.1"
 ya-service-api-cache = "0.1"
 ya-service-bus = "0.4"
 
-actix-service = "=2.0.0-beta.5"
-actix-web = "=4.0.0-beta.5"
-actix-web-httpauth = "0.6.0-beta.1"
+actix-service = "2"
+actix-web = "4"
+actix-web-httpauth = "0.6"
 futures = "0.3"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
@@ -27,8 +27,8 @@ ya-sb-router = "0.4"
 ya-service-api-derive = "0.1"
 ya-service-api-interfaces = "0.1"
 
-actix-rt = "2.2"
+actix-rt = "2.7"
 anyhow = "1.0"
-awc = "=3.0.0-beta.4"
+awc = "3"
 env_logger = "0.7"
 structopt = "0.3"
