--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -39,16 +39,16 @@ ya-transfer = "0.1"
 ya-utils-path = "0.1"
 ya-utils-networking = { version = "0.1", default-features = false, features = ["dns", "vpn"]}
 
-actix = { version = "0.11", default-features = false }
-actix-rt = "2.2"
-anyhow = "1.0.19"
+actix = { version = "0.13", default-features = false }
+actix-rt = "2.7"
+anyhow = "1.0"
 async-trait = "0.1.24"
-bytes = "0.5"
-chrono = "0.4.10"
+bytes = "1"
+chrono = "0.4"
 derivative = "2.1"
 derive_more = "0.99"
 dotenv = "0.15.0"
-flexi_logger = { version = "0.19", features = ["colors"] }
+flexi_logger = { version = "0.22", features = ["colors"] }
 futures = "0.3"
 graphene-sgx = { version = "0.4", optional = true }
 hex = "0.4.2"
@@ -62,23 +62,23 @@ reqwest = { version = "0.11", optional = true }
 secp256k1 = { version = "0.19", optional = true }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_yaml = "0.8.11"
+serde_yaml = "0.8"
 sha3 = "0.8.2"
 signal-hook = "0.3"
 structopt = "0.3"
-thiserror = "1.0.10"
+thiserror = "1.0"
 tokio = { version = "1", features = ["process", "signal", "time", "net"] }
 tokio-util = { version = "0.7.2", features = ["codec", "net"] }
 tokio-stream = "0.1.6"
-url = "2.1.1"
+url = "2.1"
 yansi = "0.5.0"
 
 [dev-dependencies]
 ya-runtime-api = { version = "0.4", path = "runtime-api", features = ["codec", "server"] }
 ya-sb-router = "0.4"
 
-actix-files = "=0.6.0-beta.4"
-actix-web = "=4.0.0-beta.5"
+actix-files = "0.6"
+actix-web = "4"
 env_logger = "0.7"
 rustyline = "7.0.0"
 sha3 = "0.8.2"
