--- a/utils/transfer/Cargo.toml
+++ b/utils/transfer/Cargo.toml
@@ -12,9 +12,10 @@ ya-service-bus = "0.4"
 ya-utils-path = "0.1"
 gftp = { version = "^0.2"}
 
-actix-http = "=3.0.0-beta.5"
-actix-rt = "2.2"
-awc = { version = "=3.0.0-beta.4", features = ["openssl"] }
+actix-http = "3"
+actix-web = "4"
+actix-rt = "2.7"
+awc = { version = "3.0", features = ["openssl"] }
 # async-compression 0.3.8+ deprecates the "stream" module
 async-compression = { version = "=0.3.7", features = ["tokio", "futures-io", "stream", "bzip2", "gzip", "xz"] }
 bytes = "1.0"
@@ -33,7 +34,7 @@ tempdir = "0.3.7"
 thiserror = "1.0.11"
 tokio = { version = "1", features = ["fs", "io-util"] }
 tokio-tar = "0.3"
-tokio-util = { version = "0.6", features = ["io"] }
+tokio-util = { version = "0.7", features = ["io"] }
 url = "2.1.1"
 walkdir = "2.3.1"
 
@@ -44,7 +45,7 @@ git = "https://github.com/golemfactory/zip-rs.git"
 branch = "feature/tokio-1"
 
 [dev-dependencies]
-actix-web = "=4.0.0-beta.5"
+actix-web = "4"
 anyhow = "1.0"
 env_logger = "0.7"
 sha2 = "0.8.1"
