--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -14,7 +14,7 @@ hybrid-net = []
 ya-core-model = { version = "^0.6", features=["net", "identity"] }
 
 # ya-relay-client = "0.2"
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "56b02e83202faddf3d84ada836d0bd7e7b0be3ee" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "86e7d08f4ca4ef8908b3be386855949ac73514aa" }
 
 ya-sb-proto = { version = "0.4" }
 ya-service-api = "0.1"
@@ -22,6 +22,7 @@ ya-service-api-interfaces = "0.1"
 ya-service-bus = "0.4"
 ya-utils-networking = "0.1"
 
+actix = "0.10"
 actix-rt = "1.0"
 anyhow = "1.0"
 futures = "0.3"
