--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -14,8 +14,8 @@ hybrid-net = []
 ya-core-model = { version = "^0.7", features=["net", "identity"] }
 
 # ya-relay-client = "0.2"
-#ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "0e6863c24767a246531d038455921f12c9e75e94" }
-ya-relay-client = { path = "../../../ya-relay/client" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "b8327413f1b28a50a4c04641a57e0e5dcdb109b6" }
+#ya-relay-client = { path = "../../../ya-relay/client" }
 
 ya-sb-proto = { version = "0.4" }
 ya-service-api = "0.1"
