--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -14,7 +14,8 @@ hybrid-net = []
 ya-core-model = { version = "^0.7", features=["net", "identity"] }
 
 # ya-relay-client = "0.2"
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "907ebaeae7176a6e6b8c17443dbb3a6a3050a798" }
+# ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "907ebaeae7176a6e6b8c17443dbb3a6a3050a798" }
+ya-relay-client = { path = "../../../ya-relay/client"}
 
 ya-sb-proto = { version = "0.4" }
 ya-service-api = "0.1"
