--- a/utils/manifest-utils/Cargo.toml
+++ b/utils/manifest-utils/Cargo.toml
@@ -27,8 +27,7 @@ semver = { version = "1.0", features = ["serde"] }
 sha2 = { version = "0.9" }
 snailquote = { version = "0.3" }
 structopt = { version =  "0.3" }
-strum = {version = "0.22" }
-strum_macros = {version = "0.22" }
+strum = { version = "0.24", features = ["derive"] }
 url = {version = "2.2", features = ["serde"] }
 
 [dev-dependencies]
