--- a/.github/workflows/add-to-core-team-project.yml
+++ b/.github/workflows/add-to-core-team-project.yml
@@ -1,11 +1,17 @@
 name: Add New Issues To Core Team Project
-  uses: actions/add-to-project@v0.1.0
-  with:
-    # URL of the project to add issues to
-    project-url: https://github.com/orgs/golemfactory/projects/30
-    # A GitHub personal access token with write access to the project
-    github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
-    # A comma-separated list of labels to use as a filter for issue to be added
-    #labeled: # optional
-    # The behavior of the labels filter, AND to match all labels, OR to match any label, NOT to exclude any listed label (default is OR)
-    #label-operator: # optional
+
+on:
+  issues:
+    types:
+      - opened
+
+jobs:
+  add-to-project:
+    name: Add issue to project
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/add-to-project@v0.1.0
+      with:
+        project-url: https://github.com/orgs/golemfactory/projects/30
+        github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+    
