--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "ya-utils-networking"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 
 [features]
 default = ["dns"]
-dns = ["anyhow",  "url", "trust-dns-resolver/mdns"]
+dns = ["anyhow",  "url", "trust-dns-resolver/tokio-openssl"]
 vpn = ["ya-relay-stack", "ipnet", "thiserror"]
 
 [dependencies]
@@ -18,8 +18,7 @@ regex = "1"
 ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "0e6863c24767a246531d038455921f12c9e75e94", optional = true }
 
 anyhow = { version = "1.0", optional = true }
-trust-dns-resolver = { version = "0.19", optional = true }
-tokio-compat-02 = "0.2"
+trust-dns-resolver = { version = "0.21", optional = true }
 url = { version = "2.2", optional = true }
 
 ipnet = { version = "2.3", optional = true }
