Local hybrid net setup WIP

--- a/.env-template
+++ b/.env-template
@@ -100,8 +100,8 @@ YAGNA_APPKEY=__GENERATED_APP_KEY__
 
 # Choose NET type to use. Central NET is used by default, but will be removed
 # in future version to use more decentralized solutions.
-#YA_NET_TYPE=hybrid
-YA_NET_TYPE=central
+# Possible values: "hybrid", "central"
+YA_NET_TYPE=__NET_TYPE__
 
 ## Central Net configuration.
 #CENTRAL_NET_HOST=3.249.139.167:7464
