--- a/.github/workflows/add-to-core-team-project.yml
+++ b/.github/workflows/add-to-core-team-project.yml
@@ -13,5 +13,5 @@ jobs:
     - uses: actions/add-to-project@v0.1.0
       with:
         project-url: https://github.com/orgs/golemfactory/projects/30
-        github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+        github-token: ${{ secrets.CORE_BOARD_ACTIONS_TOKEN }}
     
