--- a/core/persistence/Cargo.toml
+++ b/core/persistence/Cargo.toml
@@ -30,4 +30,5 @@ tokio = { version = "1", features = [] }
 
 [dev-dependencies]
 tempdir = "0.3.7"
+test-case = "2"
 tokio = { version = "1", features = ["macros", "rt"] }
