--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ erc20-driver = ['ya-erc20-driver']
 zksync-driver = ['ya-zksync-driver']
 tos = []
 # Temporary to make goth integration tests work
-hybrid-net = ['ya-net/hybrid-net']
+central-net = ['ya-net/central-net']
 
 [[bin]]
 name = "yagna"
