--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -21,6 +21,7 @@ ya-compile-time-utils = "0.2"
 ya-core-model = { version = "^0.7", features = ['activity', 'payment'] }
 ya-file-logging = "0.1"
 ya-utils-actix = "0.1"
+ya-utils-cli = "0.1"
 ya-utils-path = "0.1"
 ya-utils-process = { version = "0.1", features = ['lock'] }
 ya-std-utils = "0.1"
