--- a/utils/manifest-utils/Cargo.toml
+++ b/utils/manifest-utils/Cargo.toml
@@ -14,7 +14,7 @@ ya-agreement-utils = "0.4"
 
 serde = "1.0"
 serde_json = "1.0"
-serde_yaml = "0.8"
+serde_yaml = "0.9"
 thiserror = "1.0"
 
 anyhow = { version = "1.0" }
@@ -22,7 +22,6 @@ base64 = { version = "0.13" }
 chrono = { version = "0.4", features = ["serde"] }
 hex = { version = "0.4" }
 semver = { version = "1.0", features = ["serde"] }
-sha2 = { version = "0.9" }
 snailquote = { version = "0.3" }
 structopt = { version =  "0.3" }
 strum = { version = "0.24", features = ["derive"] }
@@ -34,5 +33,5 @@ md-5 = "0.10"
 anyhow = "1.0"
 serial_test = "0.9"
 shlex = "1.1"
-tempdir = "0.3"
+tar = "0.4"
 test-case = "2.2"
