--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -15,8 +15,8 @@ ya-client-model = "0.4"
 ya-core-model = { version = "^0.7", features=["net", "identity"] }
 
 # ya-relay-client = "0.2"
-#ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "879d6d30a013e7f6b954c524e06e1b759772a415" }
-ya-relay-client = { path = "../../../ya-relay/client" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "0c1c1718261fe970e6e1dd441a5d462221d2c001" }
+#ya-relay-client = { path = "../../../ya-relay/client" }
 
 ya-sb-proto = { version = "0.4" }
 ya-service-api = "0.1"
