--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -22,7 +22,8 @@ pytest = "^6.2"
 pytest-asyncio = "^0.14"
 #goth = "^0.11"
 # to use development goth version uncomment below
-goth = { git = "https://github.com/golemfactory/goth.git", rev = "51e5b6f7f8e76b2f7b6f572e3ef127b0618281f4" }
+goth =  {path = "../../goth"} 
+# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "51e5b6f7f8e76b2f7b6f572e3ef127b0618281f4" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
