--- a/goth_tests/goth-config.yml
+++ b/goth_tests/goth-config.yml
@@ -48,6 +48,8 @@ node-types:
         destination: "/root/.local/share/ya-provider/hardware.json"
       - read-write: "~/.local/share/ya-provider/vm-images"
         destination: "/root/.local/share/ya-provider/exe-unit/cache/tmp"
+      - read-write: "provider/cert_dir"
+        destination: "/work/cert-dir"
     privileged-mode: True
 
 nodes:
