Update goth config

--- a/goth_tests/goth-config.yml
+++ b/goth_tests/goth-config.yml
@@ -4,7 +4,6 @@
 # home directory.
 
 docker-compose:
-
   # Path to compose file to be used, relative to `docker-dir`
   compose-file: "docker-compose.yml"
   docker-dir: "assets/docker/"
@@ -25,12 +24,9 @@ docker-compose:
     ethereum: ".*Wallets supplied."
     zksync: ".*Running on http://.*:3030/.*"
 
-
 key-dir: "assets/keys"
 
-
 web-root: "assets/web-root"
-
 
 node-types:
   # Each node type is a collection of attributes common to a group of nodes.
@@ -48,12 +44,11 @@ node-types:
         destination: "/root/.local/share/ya-provider/hardware.json"
       - read-write: "~/.local/share/ya-provider/vm-images"
         destination: "/root/.local/share/ya-provider/exe-unit/cache/tmp"
-      - read-write: "provider/cert_dir"
-        destination: "/work/cert-dir"
+      - read-write: "assets/provider/cert_dir"
+        destination: "/root/.local/share/ya-provider/cert_dir"
     privileged-mode: True
 
 nodes:
-
   - name: "requestor"
     type: "Requestor"
 
