--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -13,9 +13,11 @@ ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
 ya-service-bus = "0.4"
 
+actix-rt = "2.7"
 anyhow = "1.0"
 appdirs = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
+ctrlc = "3.2"
 diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = "1.4"
 ethsign = "0.8"
@@ -37,7 +39,7 @@ rustc-hex = "2.1.0"
 ya-service-api-derive = "0.1"
 ya-sb-router = "0.4"
 
-actix-rt = "2.7"
+
 actix-service = "2"
 actix-web = "4"
 awc = "3"
