--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -35,6 +35,8 @@ tokio = { version = "1", features = ["fs"] }
 uuid = { version = "0.8", features = ["v4"] }
 rustc-hex = "2.1.0"
 
+yansi = "0.5.0"
+
 [dev-dependencies]
 ya-service-api-derive = "0.1"
 ya-sb-router = "0.4"
