2183 locked account locks daemon (#2187)
* skeleton

* Check default account

* First working version

* unwrap

* add comment

* check identity

* extract function

* Basic version of ctrlc handling

* early return

* some better things

* more extracts

* extract wait

* colored print

* better print

* unnecessary imports

* unnecessary func

* format toml

* unnecessary comments

* actix remove

* change color to orange

* looping when invalid password

* leave match

* unnecessary newlines

* error handling

* move log after bind

* include nodeid in log

* order of unbind and unsubscribe

* Specific log

* double check lock

* Remove db dependency

* remove unnecessary dao

--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -16,6 +16,7 @@ ya-service-bus = "0.4"
 anyhow = "1.0"
 appdirs = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
+ctrlc = "3.2"
 diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = "1.4"
 ethsign = "0.8"
@@ -32,6 +33,7 @@ thiserror = "1.0"
 tokio = { version = "1", features = ["fs"] }
 uuid = { version = "0.8", features = ["v4"] }
 rustc-hex = "2.1.0"
+yansi = "0.5.0"
 
 [dev-dependencies]
 ya-service-api-derive = "0.1"
