Serializable whitelist config. Manifest negotiator domain whitelist support.

--- a/utils/manifest-utils/Cargo.toml
+++ b/utils/manifest-utils/Cargo.toml
@@ -12,11 +12,11 @@ keywords = ["golem", "yagna"]
 [dependencies]
 ya-agreement-utils = "0.4"
 
+regex = "1.5"
 serde = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.9"
 thiserror = "1.0"
-
 anyhow = { version = "1.0" }
 base64 = { version = "0.13" }
 chrono = { version = "0.4", features = ["serde"] }
@@ -28,6 +28,7 @@ strum = { version = "0.24", features = ["derive"] }
 url = {version = "2.2", features = ["serde"] }
 openssl = { version = "0.10", features = ["vendored"] }
 md-5 = "0.10"
+log = "0.4"
 
 [dev-dependencies]
 anyhow = "1.0"
