--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,8 +51,8 @@ ya-utils-process = { version = "0.1", features = ["lock"] }
 ya-utils-networking = "0.1"
 ya-version = "0.1"
 ya-vpn = "0.1"
-ya-client = "0.6"
-ya-client-model = "0.4"
+ya-client = "0.7"
+ya-client-model = "0.5"
 
 gftp = { version = "^0.2", optional = true } # just to enable gftp build for cargo-deb
 ya-provider = { version = "0.2", optional = true } # just to enable conditionally running some tests
@@ -187,8 +187,8 @@ ya-service-api-web = { path = "core/serv-api/web" }
 #ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "498cab4a9c36e06677b436101d0e7e269f5ea90c"}
 
 ## CLIENT
-ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "3883172196e29eea4665176d92ea91571305beb2" }
-ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "3883172196e29eea4665176d92ea91571305beb2" }
+#ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "ada12de80045f67670cc0d0fc7d9f2ee3d42ae11" }
+#ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "ada12de80045f67670cc0d0fc7d9f2ee3d42ae11" }
 
 ## OTHERS
 gftp = { path = "core/gftp" }
