--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -13,10 +13,10 @@ name = "ya-provider"
 path = "src/main.rs"
 
 [dependencies]
-ya-agreement-utils = { version = "^0.4" }
+ya-agreement-utils = { version = "0.4" }
 ya-manifest-utils = { version = "^0.1" }
-ya-client = { version = "0.6", features = ['cli'] }
-ya-client-model = "0.4"
+ya-client = { version = "0.7", features = ['cli'] }
+ya-client-model = "0.5"
 ya-compile-time-utils = "0.2"
 ya-core-model = { version = "^0.7", features = ['activity', 'payment'] }
 ya-file-logging = "0.1"
