--- a/core/market/Cargo.toml
+++ b/core/market/Cargo.toml
@@ -10,8 +10,8 @@ test-suite = []
 bcast-singleton = []
 
 [dependencies]
-ya-agreement-utils = { version = "^0.3" }
-ya-client = "0.6"
+ya-agreement-utils = { version = "0.4" }
+ya-client = "0.7"
 ya-core-model = { version = "^0.7", features = ["market", "net"] }
 ya-diesel-utils = { version = "0.1" }
 ya-market-resolver = "0.2"
