--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -75,6 +75,7 @@ winapi = { version = "0.3.8", features = ["fileapi"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
+base64 = "0.13"
 chrono = "0.4"
 test-case = "2.1"
 predicates = "2.1"
