--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -81,3 +81,4 @@ test-case = "2.1"
 predicates = "2.1"
 serial_test = "0.9"
 shlex = "1.1"
+ya-manifest-test-utils = { path = "../../utils/manifest-utils/test-utils" }
