--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -82,3 +82,4 @@ predicates = "2.1"
 serial_test = "0.9"
 shlex = "1.1"
 ya-manifest-test-utils = { path = "../../utils/manifest-utils/test-utils" }
+openssl = "0.10"
