--- a/utils/manifest-utils/test-utils/Cargo.toml
+++ b/utils/manifest-utils/test-utils/Cargo.toml
@@ -9,8 +9,9 @@ license = "LGPL-3.0"
 description = "Yagna manifest INTERNAL TEST utils"
 
 [dependencies]
-
+base64 = "0.13"
 tar = "0.4"
-ya-manifest-utils = { path = ".." }
+openssl = "0.10"
 
+ya-manifest-utils = { path = ".." }
 ya-agreement-utils = "0.3"
