add two missing utils crates to members

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,7 +142,9 @@ members = [
     "golem_cli",
     "utils/actix_utils",
     "utils/agreement-utils",
+    "utils/cli",
     "utils/compile-time-utils",
+    "utils/file-logging",
     "utils/futures",
     "utils/manifest-utils",
     "utils/networking",
