--- a/utils/manifest-utils/test-utils/Cargo.toml
+++ b/utils/manifest-utils/test-utils/Cargo.toml
@@ -13,5 +13,5 @@ base64 = "0.13"
 tar = "0.4"
 openssl = "0.10"
 
-ya-manifest-utils = { path = ".." }
+ya-manifest-utils = "0.1"
 ya-agreement-utils = "0.3"
