--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -15,14 +15,14 @@ ya-client-model = "0.5"
 ya-core-model = { version = "^0.7", features=["net", "identity"] }
 
 # ya-relay-client = "0.2"
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "6072306cefe6fb743896ef6d8c3b471260336140" }
-#ya-relay-client = { path = "../../../ya-relay/client" }
+#ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "6072306cefe6fb743896ef6d8c3b471260336140" }
+ya-relay-client = { path = "../../../ya-relay/client" }
 
 ya-sb-proto = { version = "0.6" }
 ya-service-api = "0.1"
 ya-service-api-interfaces = "0.1"
 ya-service-bus = "0.6"
-ya-utils-networking = "0.1"
+ya-utils-networking = { version = "0.1", features = ["socket"] }
 
 actix = "0.13"
 actix-web = "4"
