--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "ya-utils-networking"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 
 [features]
 default = ["dns"]
 dns = ["anyhow",  "url", "trust-dns-resolver/tokio-openssl"]
-vpn = ["ya-relay-stack", "ipnet", "thiserror"]
+vpn = ["socket", "ya-relay-stack", "ipnet", "thiserror"]
+socket = ["tokio", "tokio-stream", "thiserror"]
 
 [dependencies]
 futures = "0.3"
@@ -18,8 +19,9 @@ regex = "1"
 ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "0e6863c24767a246531d038455921f12c9e75e94", optional = true }
 
 anyhow = { version = "1.0", optional = true }
-trust-dns-resolver = { version = "0.21", optional = true }
-url = { version = "2.2", optional = true }
-
 ipnet = { version = "2.3", optional = true }
+trust-dns-resolver = { version = "0.21", optional = true }
 thiserror = { version = "1.0", optional = true }
+tokio = { version = "1", optional = true }
+tokio-stream = { version = "0.1", optional = true }
+url = { version = "2.2", optional = true }
