--- a/core/persistence/Cargo.toml
+++ b/core/persistence/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ya-persistence"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 
@@ -10,10 +10,10 @@ service = ["ya-service-api", "ya-service-api-interfaces", "ya-utils-process", "s
 
 [dependencies]
 ya-client-model = { version = "0.5", features = [ "with-diesel" ] }
-ya-core-model = { version = "^0.8" }
+ya-core-model = { version = "0.8" }
 ya-service-api = { version = "0.1", optional = true }
-ya-service-api-interfaces = {version = "0.1", optional = true }
-ya-utils-process = { version = "0.1", features = ["lock"], optional = true }
+ya-service-api-interfaces = { version = "0.2", optional = true }
+ya-utils-process = { version = "0.2", features = ["lock"], optional = true }
 
 anyhow = "1.0.26"
 bigdecimal = "0.2"
