--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ya-exe-unit"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 
@@ -28,16 +28,16 @@ libproc = "0.7"
 winapi = { version = "0.3.8", features = ["jobapi2", "processthreadsapi"] }
 
 [dependencies]
-ya-agreement-utils = { version = "^0.4" }
-ya-manifest-utils = { version = "^0.1" }
+ya-agreement-utils = { version = "0.4" }
+ya-manifest-utils = { version = "0.2" }
 ya-client-model = "0.5"
 ya-compile-time-utils = "0.2"
 ya-core-model = { version = "^0.8", features = ["activity", "appkey"] }
 ya-runtime-api = { version = "0.5", path = "runtime-api", features = ["server"] }
 ya-service-bus = "0.6"
-ya-transfer = "0.2"
+ya-transfer = "0.3"
 ya-utils-path = "0.1"
-ya-utils-networking = { version = "0.1", default-features = false, features = ["dns", "vpn"]}
+ya-utils-networking = { version = "0.2", default-features = false, features = ["dns", "vpn"]}
 
 actix = { version = "0.13", default-features = false }
 actix-rt = "2.7"
