--- a/utils/manifest-utils/test-utils/Cargo.toml
+++ b/utils/manifest-utils/test-utils/Cargo.toml
@@ -1,20 +1,17 @@
 [package]
-name = "ya-utils-cli"
+name = "ya-manifest-test-utils"
 version = "0.1.0"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 homepage = "https://github.com/golemfactory/yagna"
 repository = "https://github.com/golemfactory/yagna"
 license = "LGPL-3.0"
-description = "Yagna CLI utils"
-keywords = ["golem", "yagna"]
+description = "Yagna manifest INTERNAL TEST utils"
 
 [dependencies]
-anyhow = "1.0"
-prettytable-rs = "0.9"
-serde = "1.0"
-serde_json = "1.0"
-serde_yaml = "0.9"
-lazy_static = "1.4"
+base64 = "0.13"
+tar = "0.4"
+openssl = "0.10"
 
-[dev-dependencies]
+ya-manifest-utils = "0.1"
+ya-agreement-utils = "0.4"
