--- a/utils/process/Cargo.toml
+++ b/utils/process/Cargo.toml
@@ -3,6 +3,11 @@ name = "ya-utils-process"
 version = "0.2.0"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
+homepage = "https://github.com/golemfactory/yagna"
+repository = "https://github.com/golemfactory/yagna"
+license = "LGPL-3.0"
+description="Yagna utils for asnychronous process handling"
+keywords=["golem", "yagna", "process"]
 
 [features]
 default = []
