--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -19,6 +19,7 @@ ya-core-model = { version = "^0.8", features=["net", "identity"] }
 ya-relay-client = { path = "../../../ya-relay/client" }
 
 ya-sb-proto = { version = "0.6" }
+ya-sb-util = { version = "0.4" }
 ya-service-api = "0.1"
 ya-service-api-interfaces = "0.2"
 ya-service-bus = "0.6"
