add workspace option

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -31,4 +31,4 @@ jobs:
           components: clippy
 
       - name: Clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --workspace --all-targets --all-features -- -D warnings
