--- a/utils/process/Cargo.toml
+++ b/utils/process/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 homepage = "https://github.com/golemfactory/yagna"
 repository = "https://github.com/golemfactory/yagna"
 license = "LGPL-3.0"
-description="Yagna utils for asnychronous process handling"
+description="Yagna utils for asynchronous process handling"
 keywords=["golem", "yagna", "process"]
 
 [features]
