--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -72,6 +72,7 @@ thiserror = "1.0"
 tokio = { version = "1", features = ["process", "signal", "time", "net", "rt-multi-thread"] }
 tokio-util = { version = "0.7.2", features = ["codec", "net"] }
 tokio-stream = "0.1.6"
+tokio-seqpacket = "0.5"
 url = "2.1"
 yansi = "0.5.0"
 
