--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -20,6 +20,7 @@ sgx=['graphene-sgx', 'openssl/vendored', 'reqwest/trust-dns', 'secp256k1/rand', 
 [target.'cfg(target_family = "unix")'.dependencies]
 nix = "0.22.0"
 bytes = "1"
+char-device = { version = "0.13", features = ["use_tokio"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 libproc = "0.7"
@@ -69,7 +70,7 @@ socket2 = "0.4"
 structopt = "0.3"
 thiserror = "1.0"
 # keep the "rt-multi-thread" feature
-tokio = { version = "1", features = ["process", "signal", "time", "net", "rt-multi-thread"] }
+tokio = { version = "1.8.1", features = ["process", "signal", "time", "net", "rt-multi-thread"] }
 tokio-util = { version = "0.7.2", features = ["codec", "net"] }
 tokio-stream = "0.1.6"
 tokio-seqpacket = "0.5"
