--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -44,6 +44,12 @@ jobs:
           command: fmt
           args: --all -- --check
 
+      - name: Check clippy lints
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --all-targets --all-features --workspace
+
       - name: Install openssl ( Windows only )
         if: runner.os == 'Windows'
         run: |
@@ -56,4 +62,3 @@ jobs:
         with:
           command: test
           args: --workspace --exclude=["./agent/provider/src/market"] --locked
-
