--- a/exe-unit/runtime-api/Cargo.toml
+++ b/exe-unit/runtime-api/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ya-runtime-api"
 description = "Communication API between the Runtime and ExeUnit Supervisor. Provides server implementation for Runtime and client implementation for Supervisor."
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 license = "GPL-3.0"
@@ -32,6 +32,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1" , optional = true, features = ["io-std", "rt", "process", "sync"] }
 tokio-util = { version = "0.7", optional = true, features = ["codec"] }
+url = "2.3"
 
 [build-dependencies]
 prost-build = "0.10"
