--- a/core/vpn/Cargo.toml
+++ b/core/vpn/Cargo.toml
@@ -34,6 +34,7 @@ serde_json = "1.0"
 smoltcp = { git = "https://github.com/golemfactory/smoltcp", rev = "acb743b6990fd92303c24c43ff75711422a5cb94" }
 thiserror = "1.0"
 tokio = { version = "1", features = ["time"] }
+tokio-stream = "0.1.6"
 uuid = { version = "0.8", features = ["v4"] }
 
 [dev-dependencies]
