Add file descriptor metrics
This adds the yagna.fds.FD_TYPE metrics, where FD_TYPE can be:
* Fifo
* Chr
* Dir
* Blk
* Reg
* Lnk
* Sock
* Fmt
* Other

Uses /proc/self/fd and fstat on Linux. All metrics are 0 on other
operating systems.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ ya-utils-path = "0.1"
 ya-utils-futures = "0.2"
 ya-utils-process = { version = "0.2", features = ["lock"] }
 ya-utils-networking = "0.2"
+ya-fd-metrics = { path = "utils/fd-metrics" }
 ya-version = "0.2"
 ya-vpn = "0.2"
 ya-client = "0.7"
@@ -67,6 +68,7 @@ dotenv = "0.15.0"
 futures = "0.3"
 lazy_static = "1.4"
 log = "0.4"
+metrics = "0.12"
 openssl = "0.10"
 openssl-probe = { version = "0.1", optional = true }
 serde = "1.0"
@@ -155,6 +157,7 @@ members = [
     "utils/scheduler",
     "utils/transfer",
     "utils/diesel-utils",
+    "utils/fd-metrics",
     "core/metrics"
 ]
 
