--- a/utils/manifest-utils/Cargo.toml
+++ b/utils/manifest-utils/Cargo.toml
@@ -32,6 +32,7 @@ anyhow = { version = "1.0" }
 base64 = { version = "0.13" }
 chrono = { version = "0.4", features = ["serde"] }
 hex = { version = "0.4" }
+itertools = "0.10"
 semver = { version = "1.0", features = ["serde"] }
 snailquote = { version = "0.3" }
 structopt = { version =  "0.3" }
