--- a/Cargo.toml
+++ b/Cargo.toml
@@ -227,5 +227,9 @@ web3 = { git = "https://github.com/golemfactory/rust-web3", branch = "update_eth
 
 # Speed up builds on macOS (will be default in next rust version probably)
 # https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
-[profile.dev]
-split-debuginfo = "unpacked"
+#
+# TODO: reenable split-debuginfo.
+# Commented out split-debuginfo makes Windows builds fail due to "`-Csplit-debuginfo=unpacked` is unstable on this platform."
+# This should not be the case (cargo is meant to verify that this option is supported), but it is since version 1.65, I think.
+# [profile.dev]
+# split-debuginfo = "unpacked"
