Initial packet tracing support
* Add dependency on ya-packet-trace.
* Add packet-trace-enable feature to relevant crates and propagate it
  correctly.
* Add packet_trace(_maybe) invocations to VPN.
* If packet-trace-enable feature is set, modify the file log format so
  it can be more easily processed later on. This does not affect the
  logs printed to stdout.

--- a/utils/file-logging/Cargo.toml
+++ b/utils/file-logging/Cargo.toml
@@ -10,3 +10,7 @@ chrono = "0.4"
 flexi_logger = { version = "0.17", features = ["colors", "compress"] }
 log = "0.4"
 yansi = "0.5.0"
+
+[features]
+packet-trace-enable = []
+default = []
