--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ zksync-driver = ['ya-zksync-driver']
 tos = []
 # Temporary to make goth integration tests work
 central-net = ['ya-net/central-net']
+packet-trace-enable = ["ya-vpn/packet-trace-enable", "ya-file-logging/packet-trace-enable"]
 
 [[bin]]
 name = "yagna"
