--- a/core/vpn/Cargo.toml
+++ b/core/vpn/Cargo.toml
@@ -14,6 +14,7 @@ ya-service-api-interfaces = "0.2"
 ya-service-api-web = "0.2"
 ya-service-bus = "0.6.1"
 ya-utils-networking = { version = "0.2", default-features = false, features = ["vpn"]}
+ya-packet-trace = { git = "https://github.com/golemfactory/ya-packet-trace" }
 
 actix = "0.13"
 actix-web = "4"
@@ -36,9 +37,12 @@ tokio = { version = "1", features = ["time"] }
 tokio-stream = "0.1.6"
 uuid = { version = "0.8", features = ["v4"] }
 
+[features]
+packet-trace-enable = ["ya-packet-trace/enable"]
+default = []
+
 [dev-dependencies]
 ya-client = "0.7"
-
 actix-rt = "2.7"
 sha3 = "0.8.2"
 structopt = "0.3"
