--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -15,7 +15,7 @@ lazy_static = "1.4"
 log = "0.4"
 regex = "1"
 
-ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "6e2c55808f363c948805c99b90d47c9c2a3eed7d", optional = true }
+ya-relay-stack = { version = "0.4.1", optional = true }
 
 anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { version = "0.21", optional = true }
