WebSocket API for listening to GSB messages

--- a/core/gsb-api/Cargo.toml
+++ b/core/gsb-api/Cargo.toml
@@ -12,7 +12,9 @@ ya-service-api-interfaces = "0.2"
 ya-service-api-web = "0.2"
 ya-service-bus = "0.6"
 
+actix = "0"
 actix-web = "4"
+actix-web-actors = "4"
 actix-http = "3"
 anyhow = "1"
 log = "0"
