Return autoconfigured key when no key match. Only dev option

--- a/.env-template
+++ b/.env-template
@@ -14,6 +14,11 @@ YAGNA_DATADIR="."
 
 ## REST API
 
+# Optional for development - disable app-key security for backend.
+# Yagna will return default identity if no match fo app-key.
+# Enables possibility of using backend easily without bearer authentication.
+#YAGNA_DEV_DISABLE_APPKEY_SECURITY=1
+
 # Default HOST:PORT for all REST APIs.
 #YAGNA_API_URL=http://127.0.0.1:7465
 
