--- a/core/serv-api/web/Cargo.toml
+++ b/core/serv-api/web/Cargo.toml
@@ -19,6 +19,7 @@ futures = "0.3"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 url = "2.1.1"
+lazy_static = "1.4"
 
 [dev-dependencies]
 ya-identity = "0.3"
